Remove passkey feature and add admin notifications
Removed all passkey (WebAuthn) related frontend and backend code, dependencies, and database usage. Introduced a new admin notification system with SSE support, including frontend UI for sending and receiving notifications, new permissions, and related backend endpoints. Updated admin creation to grant notification permissions and added database migrations for the new feature.